--- a/Biblioteca/static/index.html
+++ b/Biblioteca/static/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style>
         :root {
-            --primary: #4e73df;
+            --primary: #3c64dd;
             --success: #1cc88a;
             --info: #36b9cc;
             --warning: #f6c23e;
@@ -17,6 +17,8 @@
             --reportes: #6f42c1;
             --notificaciones: #fd7e14; 
         }
+
+            
         .card-header {
             font-weight: 600;
         }
