--- a/Biblioteca/static/index.html
+++ b/Biblioteca/static/index.html
@@ -10,7 +10,7 @@
     <style>
         :root {
             --primary: #4e73df;
-            --success: #1cc88a;
+            --success: #16ad76;
             --info: #36b9cc;
             --warning: #f6c23e;
             --danger: #e74a3b;
