--- a/Biblioteca/static/usuario.html
+++ b/Biblioteca/static/usuario.html
@@ -44,6 +44,9 @@
         <h1 class="h3 mb-4 text-gray-800">
             <i class="bi bi-bell"></i> Seleccione Usuario
         </h1>
+        <h2 class="h3 mb-4 text-gray-800">
+            <i class="bi bi-bell"></i>Simulacion de tokenizacion
+        </h2>
 
         <div class="row mb-4">
             <div class="col-md-4">
