--- a/Biblioteca/static/usuario.html
+++ b/Biblioteca/static/usuario.html
@@ -48,7 +48,7 @@
         <div class="row mb-4">
             <div class="col-md-4">
                 <select class="form-control" id="selectUsuario">
-                    <option value="">Seleccione un usuario</option>
+                    <option value="">Seleccione un usuarioo</option>
                     <!-- Opciones generadas dinámicamente -->
                 </select>
             </div>
