se cambioooo de color

--- a/Biblioteca/static/login.html
+++ b/Biblioteca/static/login.html
@@ -18,7 +18,7 @@
 
   /* Contenedor del login con color azul y transparencia */
   .login-container {
-    background: rgba(156, 123, 229, 0.8); /* azul con transparencia */
+    background: rgba(150, 118, 220, 0.8); /* azul con transparencia */
     border-radius: 15px;
     width: 320px;
     padding: 30px 20px;
@@ -143,11 +143,11 @@
     <div class="icon-lock">
       <i class="fa fa-lock"></i>
     </div>
-    <div class="login-title">login</div>
+    <div class="login-title">login Biblioteca </div>
     <form>
-      <label for="username">user</label>
+      <label for="username">Usuario</label>
       <input type="text" id="username" placeholder="Enter your username" />
-      <label for="password">Password</label>
+      <label for="password">Contraseña</label>
       <input type="password" id="password" placeholder="Enter your password" />
       <button type="submit">Entrar</button>
     </form>
