--- a/Biblioteca/static/usuario.html
+++ b/Biblioteca/static/usuario.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style>
         :root {
-            --primary: #4e73df;
+            --primary: #3d5dbd;
             --success: #1cc88a;
             --info: #36b9cc;
             --warning: #f6c23e;
