Se agrego un subtitulo de ejm

--- a/Biblioteca/static/usuario.html
+++ b/Biblioteca/static/usuario.html
@@ -47,6 +47,9 @@
         <h2 class="h3 mb-4 text-gray-800">
             <i class="bi bi-bell"></i>Simulacion de tokenizacion
         </h2>
+        <h2 class="h3 mb-4 text-gray-800">
+            <i class="bi bi-bell"></i>Ejemplo1 
+        </h2>
 
         <div class="row mb-4">
             <div class="col-md-4">
