se añadio un boton

--- a/Biblioteca/static/login.html
+++ b/Biblioteca/static/login.html
@@ -150,6 +150,7 @@
       <label for="password">Contraseña</label>
       <input type="password" id="password" placeholder="Enter your password" />
       <button type="submit">Entrar</button>
+     <button type="submit">informacion</button>
     </form>
     <div class="social-icons">
       <i class="fab fa-facebook-f facebook"></i>
