Se cambio de color el texto del boton Prestamo a blanco ya que estaba erroneamente en color negro

--- a/Biblioteca/static/index.html
+++ b/Biblioteca/static/index.html
@@ -78,6 +78,12 @@
             background-color: #b7e004;
             color: black;
         }
+        .btn-info {
+            color: white
+        }
+        .btn-info:hover {
+            color:white
+        }
     </style>
 </head>
 <body>
