--- a/Biblioteca/static/login.html
+++ b/Biblioteca/static/login.html
@@ -157,5 +157,19 @@
       <i class="fab fa-instagram instagram"></i>
     </div>
   </div>
+
+  <script>
+    const form = document.querySelector('form');
+
+    form.addEventListener('submit', function(event) {
+      const username = document.getElementById('username').value.trim();
+      const password = document.getElementById('password').value.trim();
+
+      if (!username || !password) {
+        event.preventDefault(); // Evita el envío del formulario
+        alert('Por favor, completa ambos campos: usuario y contraseña.');
+      }
+    });
+  </script>
 </body>
 </html>
