--- a/Biblioteca/static/login.html
+++ b/Biblioteca/static/login.html
@@ -105,6 +105,12 @@
     color: white;
   }
 
+  button:active {
+  background: #ff6347; /* color tomate */
+  color: #fff;
+}
+
+
   /* Iconos redes sociales */
   .social-icons {
     margin-top: 25px;
